--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-multi-carousel": "^2.8.4",
+    "react-router-dom": "^6.22.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
