--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^5.0.1",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.0",
+    "react-router-dom": "^6.22.1",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
