--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@stripe/react-stripe-js": "^2.5.1",
     "@stripe/stripe-js": "^3.0.6",
     "antd": "^5.14.0",
+    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "plyr-react": "^5.3.0",
     "react": "^18.2.0",
