--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@stripe/stripe-js": "^3.0.6",
     "antd": "^5.14.0",
     "axios": "^1.6.8",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "plyr-react": "^5.3.0",
     "react": "^18.2.0",
